asoc-40101 Respond: browser specific issues (part 1) (#1604)
* Respond: fix nodal graph links color

* Fix Inc Details inspector height

* Use CSS left/top instead of transform

* Fix svg symbols: use xlink:href instead of href

* Inspector resizer should overlap contents

--- a/respond/app/styles/respond/incident/_entities.scss
+++ b/respond/app/styles/respond/incident/_entities.scss
@@ -101,7 +101,8 @@ $entityFileHashColor: $cyan;
           stroke: rsa-color(gray,base,$rsa-nearly-transparent);
         }
         .text {
-          fill: rsa-color(gray,base,$rsa-transparent);
+          fill: rsa-color(gray,base,$rsa-nearly-transparent);
+          text-shadow: none;
         }
       }
 
